tests/ui/union/union-pat-in-param.stderr
error[E0133]: access to union field is unsafe and requires unsafe function or block
  --> $DIR/union-pat-in-param.rs:6:12
   |
LL | fn fun(U { a }: U) {
   |            ^ access to union field
   |
   = note: the field may not be properly initialized: using uninitialized data will cause undefined behavior

error[E0133]: access to union field is unsafe and requires unsafe function or block
  --> $DIR/union-pat-in-param.rs:14:24
   |
LL |     let closure = |U { a }| {
   |                        ^ access to union field
   |
   = note: the field may not be properly initialized: using uninitialized data will cause undefined behavior

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0133`.
